--- a/angular.json
+++ b/angular.json
@@ -3,9 +3,13 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "logos-angulat-test": {
+    "angular-todo-project": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -13,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/logos-angulat-test",
+            "outputPath": "dist/angular-todo-project",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,7 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -62,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "logos-angulat-test:build"
+            "browserTarget": "angular-todo-project:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "logos-angulat-test:build:production"
+              "browserTarget": "angular-todo-project:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "logos-angulat-test:build"
+            "browserTarget": "angular-todo-project:build"
           }
         },
         "test": {
@@ -88,7 +92,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
@@ -110,19 +114,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "logos-angulat-test:serve"
+            "devServerTarget": "angular-todo-project:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "logos-angulat-test:serve:production"
+              "devServerTarget": "angular-todo-project:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "logos-angulat-test",
+  "defaultProject": "angular-todo-project",
   "cli": {
-    "analytics": false
+    "analytics": "1e08b137-fb14-4f1b-822f-4da5af743905"
   }
 }
